Made responsive and updated ReadMe.md file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <title>Interior Design Landing Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -40,10 +40,7 @@
         </ul>
       </nav>
       <div class="line-1"></div>
-      <h1 class="description">
-        Interior Design That<br />
-        Care About Details
-      </h1>
+      <h1 class="description">Interior Design That Care About Details</h1>
       <button class="learn-more">LEARN MORE</button>
     </header>
     <main>
